test(viz): add integration test for LivePlotClient with Python dummy server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,8 +158,32 @@ target_compile_features(CommunicationBus PUBLIC cxx_std_20)
 if(BUILD_TESTING)
     enable_testing()
 
-    add_executable(TestVirtualClock tests/unit/Test_VirtualClock.cpp)
-    target_link_libraries(TestVirtualClock PRIVATE VirtualTime)
+    #
+    # Test: VirtualClock
+    #
+    add_executable(TestVirtualClock
+        tests/unit/Test_VirtualClock.cpp
+    )
+    target_link_libraries(TestVirtualClock
+        PRIVATE
+            VirtualTime
+    )
     target_compile_features(TestVirtualClock PRIVATE cxx_std_20)
     add_test(NAME VirtualClockTests COMMAND TestVirtualClock)
+
+
+
+    #
+    # Test: LivePlotClient
+    #
+    add_executable(TestLivePlotClient
+        tests/unit/Test_LivePlotClient.cpp
+    )
+    target_link_libraries(TestLivePlotClient
+        PRIVATE
+            Visualization
+    )
+    target_compile_features(TestLivePlotClient PRIVATE cxx_std_20)
+    add_test(NAME LivePlotClientTests COMMAND TestLivePlotClient)
+
 endif()
