feat(viz): add VisualizationPublisher with EngagementState support and JSON serialization
Added EngagementState publish/subscribe to CommunicationBus

Added JsonSerializer for all message types

Implemented VisualizationPublisher start/stop and message forwarding

Updated CMake to link Visualization with required modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,7 @@ target_link_libraries(DataLogger
 # -------------------------------------------------------
 add_library(Visualization
     Visualization/src/LivePlotClient.cpp
+    Visualization/src/JsonSerializer.cpp 
 )
 
 target_include_directories(Visualization
@@ -145,6 +146,8 @@ target_include_directories(Visualization
 target_link_libraries(Visualization
     PUBLIC
         pthread
+        CommunicationBus
+        EngagementController
 )
 
 # -------------------------------------------------------
