feat(simulation): add full SensorFusionSim executable and real-time visualization pipeline
- Added new src/main.cpp to orchestrate VirtualClock, CommunicationBus, SensorManager,
  TargetTracker, TrajectorySolver, EngagementController, DataLogger, and VisualizationPublisher.
- Integrated the new liveplot_server.py providing real-time 4-panel plotting via TCP JSON stream.
- Updated CMakeLists.txt to build the SensorFusionSim executable and link all modules.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,32 @@ target_compile_features(CommunicationBus PUBLIC cxx_std_20)
 # -------------------------------------------------------
 
 # -------------------------------------------------------
+# Main executable
+# -------------------------------------------------------
+add_executable(SensorFusionSim
+    src/main.cpp
+)
+
+target_include_directories(SensorFusionSim
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+
+target_link_libraries(SensorFusionSim
+    PRIVATE
+        VirtualTime
+        CommunicationBus
+        SensorManager
+        TargetTracker
+        TrajectorySolver
+        EngagementController
+        DataLogger
+        Visualization
+)
+
+target_compile_features(SensorFusionSim PRIVATE cxx_std_20)
+
+# -------------------------------------------------------
 # Unit Tests
 # -------------------------------------------------------
 if(BUILD_TESTING)
