feat: introduce motion-driven sensing, Kalman-based tracking, improved solver stability model, and dwell-based engagement FSM
- Added TargetMotion module and integrated MotionConfig into SensorManager
- Implemented realistic motion model (spiral/radial approach) for target kinematics
- Replaced primitive tracker with full Kalman filter (px, py, vx, vy) and covariance tracking
- Added heading integration via IMU gyro and Cartesian conversion of LiDAR range
- Introduced confidence blending: innovation, uncertainty, recency factors
- TrackerState now includes covariance_trace for downstream stability evaluation
- Updated TrajectorySolver stability scoring using confidence, covariance, and tangential speed
- EngagementController reworked:
  * Dwell times per state (Acquiring, Tracking, Aligning, Ready, Executing)
  * Safe recovery timing and adaptive transitions
  * Heartbeat publishing and stateEntered timestamps
  * setState() replaces transitionTo(), with proper locking and publish deduplication
- Updated main.cpp pipeline wiring to use new MotionConfig and ordering of modules
- Re-enabled SensorManager::generateFrame with RNG and motion model integration
- Updated unit tests to match new behavior (tracker, solver, controller, sensor manager)
- Added feeder threads to tests for continuous solver publishing during FSM testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ target_link_libraries(SensorManager
     PUBLIC
         VirtualTime
         CommunicationBus
+        TargetMotion
 )
 
 # -------------------------------------------------------
@@ -150,6 +151,26 @@ target_link_libraries(Visualization
         CommunicationBus
         EngagementController
 )
+
+# -------------------------------------------------------
+# TargetMotion module
+# -------------------------------------------------------
+add_library(TargetMotion
+    TargetMotion/src/TargetMotionGenerator.cpp
+)
+
+target_include_directories(TargetMotion
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/TargetMotion/include
+)
+
+target_link_libraries(TargetMotion
+    PUBLIC
+        VirtualTime
+        Eigen3::Eigen
+)
+
+target_compile_features(TargetMotion PUBLIC cxx_std_20)
 
 # -------------------------------------------------------
 target_compile_features(Visualization PUBLIC cxx_std_20)
